--- a/src/components/slides.css
+++ b/src/components/slides.css
@@ -1,16 +1,28 @@
-section .movie-card {
+ 
+ .Swiper{
+   width: 100%;
+   left: 0;
+
+
+ }
+ .movie-card {
     position: relative;
-    height: auto;
+    height: 250px !important;
     margin: 10px;
     padding: 10px;
-   
+   width: fit-content;
     box-shadow: 0 0 16px rgba(255, 255, 255, 0.5);
     background-color: black !important;
     transition: 0.5s;
    
 }
+.movie-card img{
+    width: auto;
+    height: 150px !important;
 
-section .movie-card::before {
+}
+
+ .movie-card::before {
     content: "";
     position: absolute;
     top: 0;
@@ -24,7 +36,7 @@ section .movie-card::before {
     transform: scale(0);
 }
 
-section .movie-card p {
+ .movie-card p {
     position: relative;
     height: 2em;
     overflow: hidden;
@@ -35,19 +47,19 @@ section .movie-card p {
     margin: 10px;
 }
 
-section .movie-card .relese-date {
+ .movie-card .relese-date {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
 }
 
-section .movie-card .relese-date p {
+ .movie-card .relese-date p {
     color: white;
     font-size: 1em;
     margin: 0;
 }
 
-section .movie-card .content {
+.movie-card .content {
     position: absolute;
     top: 0;
     left: 0;
@@ -64,7 +76,7 @@ section .movie-card .content {
     transform: scale(0);
 }
 
-section .movie-card .content h4 {
+ .movie-card .content h4 {
     position: relative;
     font-size: 1.2rem;
     font-weight: 500;
@@ -72,7 +84,7 @@ section .movie-card .content h4 {
     text-transform: uppercase;
 }
 
-section .movie-card .content h4::after {
+ .movie-card .content h4::after {
     content: "";
     position: absolute;
     left: 0;
@@ -83,18 +95,18 @@ section .movie-card .content h4::after {
     z-index: 1000;
 }
 
-section .movie-card .content ion-icon {
+.movie-card .content ion-icon {
     font-size: 2.5rem;
     transition: 0.4s;
     cursor: pointer;
 }
 
-section .movie-card .content ion-icon:hover {
+.movie-card .content ion-icon:hover {
     color: var(--primary);
 }
 
-section .movie-card:hover::before,
-section .movie-card:hover .content {
+.movie-card:hover::before,
+.movie-card:hover .content {
     opacity: 1;
     visibility: visible;
     transform: scale(1);
