--- a/src/components/search.css
+++ b/src/components/search.css
@@ -1,27 +1,8 @@
 /* Search component styles with black background */
-.search {
-    position: relative;
-    width: 300px;
-    height: 30px;
-}
-.search input::placeholder{
-    color: #fff;
-}
-.search input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    border: 1px solid white;
-
-    border-radius: 5px;
-    outline: none;
-    background-color: transparent;
-    /* Set background color to a dark shade */
-    color: #fff;
-    /* Set text color to white */
-}
 
 
 
+ion-icon[name="search-outline"] {
+    color: white; /* Set the color to white */
+    font-size: 40px /* Adjust the font size as needed */
+  }
